tests/programs/invalid/omitted_final_field_initializer.java
public class omitted_final_field_initializer {
  protected final int x /* = 0 */;
}